--- a/main.html
+++ b/main.html
@@ -4,6 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+<title>Playlist and Players</title>
+	<style>
+		body {
+			background-color: #cccccc;
+		}
+	</style>
 </head>
 
 <body>
